stretch goal: fixed nav w/ background opacity

--- a/css/index.css
+++ b/css/index.css
@@ -182,6 +182,10 @@ nav {
   align-items: center;
   flex-direction: column;
   padding: 1rem 2rem;
+  position: fixed;
+  top: 0;
+  height: 10rem;
+  opacity: 0.9;
 }
 .navlinks {
   display: flex;
@@ -204,6 +208,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home .intro {
+  margin-top: 10rem;
 }
 .home .intro h2 {
   padding: 15px;
