--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,6 +3,8 @@
 .home {
 
   .intro {
+  
+    margin-top: 10rem;
 
     h2 {
       padding: 15px;
