--- a/less/navigation.less
+++ b/less/navigation.less
@@ -7,6 +7,10 @@ nav {
     .flexbetween();
     flex-direction: column;
     padding: 1rem 2rem;
+    position: fixed;
+    top: 0;
+    height: 10rem;
+    opacity: 0.9;
 }
 
 .navlinks {
